--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>week Two Task</title>
 </head>
 <body>
     <link rel="stylesheet" href="stylesheet.css">
@@ -12,7 +12,7 @@
     <form onsubmit="myfunction()">
         <form action="*">
             <fieldset>
-                <legend>BIODATA</legend>
+        <legend>BIODATA</legend>
         <form>
         <label for="name">fullname</label>
         <input type="text" name="fullname" id="Name"size="20"required>
@@ -27,9 +27,9 @@
         <input type="tel" name="Phone" id="Phone Number"size="20"required>
         <br>
         <label for="male">male</label>
-        <input type="radio" name="sex" id="male">
-        <label for="radio">female</label>
-        <input type="radio" name="sex" id="female">
+        <input type="radio" gender="ma" id="male"><br>
+        <label for="female">female</label>
+        <input type="radio" name="gender" id="female">
         <br>
         <label for="Password">Password</label>
         <input type="password" name="password" id="password">
